# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-supply_chain_disruption_engine"
version = "0.1.0"
description = "Supply Chain Disruption Engine environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.30.0",
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Environment-specific dependencies
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m supply_chain_disruption_engine.server.app
server = "supply_chain_disruption_engine.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["supply_chain_disruption_engine", "supply_chain_disruption_engine.server"]
package-dir = { "supply_chain_disruption_engine" = ".", "supply_chain_disruption_engine.server" = "server" }
